--- a/package.json
+++ b/package.json
@@ -22,62 +22,62 @@
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@neondatabase/serverless": "^0.10.4",
-    "@next/mdx": "^15.0.3",
+    "@next/mdx": "^15.2.2",
+    "@radix-ui/react-aspect-ratio": "^1.0.3",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@suyalcinkaya/gauge": "^0.1.0",
     "@types/mdx": "^2.0.13",
+    "@vercel/analytics": "^1.2.2",
+    "@vercel/speed-insights": "^1.0.11",
     "axios": "^1.7.8",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.36.4",
     "framer-motion": "^11.12.0",
     "inngest": "^3.26.3",
     "lucide-react": "^0.461.0",
+    "modern-errors": "^7.0.1",
     "next": "15.0.3",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-card-flip": "^1.2.3",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
     "remark-gfm": "^4.0.0",
     "rippleui": "^1.12.1",
-    "styled-components": "^6.1.13",
-    "swiper": "^11.1.15",
-    "uuid": "^11.0.3",
-    "@radix-ui/react-aspect-ratio": "^1.0.3",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@suyalcinkaya/gauge": "^0.1.0",
-    "@vercel/analytics": "^1.2.2",
-    "@vercel/speed-insights": "^1.0.11",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "modern-errors": "^7.0.1",
-    "next-themes": "^0.3.0",
     "server-only": "^0.0.1",
     "sonner": "^1.4.41",
+    "styled-components": "^6.1.13",
+    "swiper": "^11.1.15",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
+    "uuid": "^11.0.3",
     "vaul": "^0.9.1"
   },
   "devDependencies": {
-    "@types/react": "18.3.12",
-    "daisyui": "^4.12.14",
-    "drizzle-kit": "^0.28.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "5.7.2",
     "@dotenvx/dotenvx": "^0.44.0",
     "@svgr/webpack": "^8.1.0",
     "@types/node": "^20.12.8",
+    "@types/react": "18.3.12",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.0.1",
+    "daisyui": "^4.12.14",
+    "drizzle-kit": "^0.28.1",
     "eslint": "^8",
     "eslint-config-next": "^14.2.3",
     "eslint-config-prettier": "^9.1.0",
     "pg": "^8.11.5",
+    "postcss": "^8",
     "postcss-import": "^16.1.0",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.6.1",
-    "tsx": "^4.11.0"
+    "tailwindcss": "^3.4.1",
+    "tsx": "^4.11.0",
+    "typescript": "5.7.2"
   }
 }
